<resources>
    <string name="app_name">easyIssue</string>
    <string name="buildVersion">1.0.000</string>
    <string name="desc_logo">easyIssue logo</string>

    <!-- Login Page -->
    <string name="validate_token_btn">VALIDATE TOKEN</string>
    <string name="your_token_title">YOUR TOKEN</string>
    <string name="token_hint">TOKEN</string>
    <string name="tokenGuide">1.   Log in to your Github account
        \n2.   Navigate to settings
        \n3.   Open developer settings
        \n4.   Navigate to "Personal access token"
        \n5.   Check the option "repo"
        \n6.   Add a token description and click Generate token
        \n7.   Copy the token to the input field above
    </string>
    <string name="error_bad_token">Bad Token %s</string>
    <string name="error_invalid_token">Invalid Token</string>
    <string name="error_empty_title">Title cannot be empty</string>

    <!-- Project Adapter-->
    <string name="card_language">Language: %s</string>
    <string name="card_owner">Owner: %s</string>
    <string name="card_openIssues">Open Issues: %s</string>
    <string name="card_unknown">Unknown</string>

    <!-- Projects Page -->
    <string name="projects_title">YOUR PROJECTS</string>
    <string name="no_projects_found">No Projects Found</string>

    <!-- Issues Page -->
    <string name="issue_title">THE TITLE</string>
    <string name="issue_body">THE BODY</string>
    <string name="issue_image">THE IMAGE</string>
    <string name="issue_btn">SEND THE ISSUE</string>

    <!-- Logout Dialog -->
    <string name="settings_dialog_title">Logout</string>
    <string name="settings_dialog_body">You will be returned to the login screen.</string>
    <string name="settings_dialog_positive">Yes</string>
    <string name="settings_dialog_negative">No</string>

    <!-- Preferences / Settings -->
    <string name="created">Created</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="lastEdited">Last Edited</string>
    <array name="sortTypes">
        <item>@string/created</item>
        <item>@string/alphabetical</item>
        <item>@string/lastEdited</item>
    </array>

    <string name="sortType_created">sortType_created</string>
    <string name="sortType_alphabetical">sortType_alphabetical</string>
    <string name="sortType_lastEdited">sortType_lastEdited</string>
    <array name="sortTypesValues">
        <item>@string/sortType_created</item>
        <item>@string/sortType_alphabetical</item>
        <item>@string/sortType_lastEdited</item>
    </array>

    <string name="key_sortType">sortType</string>
    <string name="key_logout">logout</string>
    <string name="key_feedback">feedback</string>
    <string name="key_token">token</string>
    <string name="key_projectSpan">projectSpan</string>
    <string name="key_buildVersion">version</string>

    <string name="settings_category_project">Project</string>
    <string name="settings_doubleSpan">Double Column Display</string>
    <string name="settings_projectSort">List sort type</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_buildVersion">Build version</string>
    <string name="settings_category_info">Info</string>
    <string name="settings_logout_summary">Click here to log out</string>
    <string name="settings_sortType_dialog_title">Choose a sort type</string>

    <string name="feedback_email">SimonJDTU@Gmail.com</string>
    <string name="feedback_subject">EasyIssue feedback</string>
    <string name="feedback_summary">If you have any suggestions, send us an email!</string>

    <string name="settings_logout_btn">Log out</string>

    <string name="dialog_yes_btn">Yes</string>
    <string name="dialog_no_btn">No</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_proceed_title">Are you sure you want to create this issue?</string>
    <string name="dialog_error_title">An error has occurred. \n\n Please try again later.</string>
    <string name="dialog_logout_title">You were logged out.</string>

    <string name="confirmation_issueData">Issue #%s: \n %s</string>
    <string name="confirmation_wasCreated">was created</string>
    <string name="confirmation_btn">Back to Projects</string>



</resources>