<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_category_project">
        <SwitchPreferenceCompat
            android:key="@string/key_projectSpan"
            android:defaultValue="false"
            android:title="@string/settings_doubleSpan" />

        <ListPreference
            android:key="@string/key_sortType"
            android:title="@string/settings_projectSort"
            android:defaultValue="@string/created"
            android:dialogTitle="@string/settings_sortType_dialog_title"
            android:entries="@array/sortTypes"
            android:entryValues="@array/sortTypesValues"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_info">
        <Preference
            android:key="@string/key_buildVersion"
            android:title="@string/settings_buildVersion"
            android:summary="@string/buildVersion" />

        <Preference
            android:key="@string/key_feedback"
            android:title="@string/settings_feedback"
            android:summary="@string/feedback_summary" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="@string/key_logout"
            android:title="@string/settings_logout_btn"
            android:summary="@string/settings_logout_summary" />
    </PreferenceCategory>

</PreferenceScreen>